--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Bienvenue sur le site de</div>
-                <div class="text-2">Navilone</div> 
+                <div class="text-2">NAVILONE</div> 
                 <div class="text-3">Nous sommes experts en </br><span class="typing"></span></div>
                 <a href="#contact">Contactez-moi</a>
             </div>
