--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
           </div>
           <div class="content" id="tab-4">
             <div class="visuel">
-            <img src="images/vf.png" alt="illustration des articles">
+            <img src="images/hv.png" alt="illustration des articles">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
               Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
             </div>
           </div>
           <div class="content" id="tab-5">
             <div class="visuel">
-            <img src="images/vf.png" alt="illustration des articles">
+            <img src="images/vg.png" alt="illustration des articles">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
               Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
             </div>
           </div>
           <div class="content" id="tab-6">
             <div class="visuel">
-            <img src="images/vf.png" alt="illustration des articles">
+            <img src="images/hv.png" alt="illustration des articles">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
               Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
             </div>
