--- a/index.html
+++ b/index.html
@@ -171,36 +171,36 @@
           <div class="content" id="tab-2">
             <div class="visuel">
             <img src="images/fd.png" alt="illustration des articles">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
-              Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
+            <p>Choisir Dynamics 365 pour la gestion de la relation client (CRM), c'est opter pour une solution complète qui unifie les ventes, le marketing et le service client. 
+              Bénéficiez d'une vue à 360° sur vos clients, automatisez les tâches, personnalisez les interactions et prenez des décisions basées sur des données en temps réel pour améliorer l'engagement et la fidélisation."</p>
             </div>
           </div>
           <div class="content" id="tab-3">
             <div class="visuel">
             <img src="images/vf.png" alt="illustration des articles">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
-              Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
+            <p>Améliorez vos processus avec Power Platform, une suite d'outils Microsoft qui permet de créer des applications personnalisées, d'automatiser les tâches répétitives et d'analyser les données. 
+              Connectez facilement vos différentes sources d'information, optimisez vos flux de travail et gagnez en efficacité pour accélérer la transformation digitale de votre entreprise.</p>
             </div>
           </div>
           <div class="content" id="tab-4">
             <div class="visuel">
             <img src="images/hv.png" alt="illustration des articles">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
-              Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
+            <p>La transformation digitale améliore vos performances commerciales en automatisant les tâches, optimisant les processus et facilitant l'accès aux données en temps réel. 
+              Elle permet de mieux comprendre les besoins des clients, d'accélérer la prise de décision et de personnaliser les offres, ce qui augmente l'efficacité et booste la croissance de votre entreprise.</p>
             </div>
           </div>
           <div class="content" id="tab-5">
             <div class="visuel">
             <img src="images/vg.png" alt="illustration des articles">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
-              Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
+            <p>Découvrez la puissance de l'analyse de données avec Power BI, un outil Microsoft qui transforme vos données en informations exploitables. Créez des tableaux de bord interactifs, visualisez les tendances en temps réel et prenez des décisions éclairées pour booster vos performances. 
+              Simplifiez l'analyse complexe et partagez facilement les insights avec votre équipe.</p>
             </div>
           </div>
           <div class="content" id="tab-6">
             <div class="visuel">
             <img src="images/hv.png" alt="illustration des articles">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum culpa repellat nemo obcaecati tenetur voluptas reiciendis reprehenderit dolorem! 
-              Aliquam dolor animi accusantium beatae aspernatur ratione iusto vel laudantium magni alias.</p>
+            <p>L'intégration de Microsoft 365 avec vos systèmes d'entreprise offre une expérience fluide, connectant vos outils de productivité à vos applications métier. Accédez facilement aux données, collaborez en temps réel et automatisez les flux de travail. 
+              Cette intégration renforce l'efficacité, réduit les silos et optimise vos opérations.</p>
             </div>
           </div>
         </div>
@@ -380,16 +380,16 @@
                 <div class="footer-col">
                     <h4>La société Navilone</h4>
                     <ul>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">A propos</a></li>
-                        <li><a href="#">Services</a></li>
+                        <li><a href="#home">Accueil</a></li>
+                        <li><a href="#apropos">A propos</a></li>
+                        <li><a href="#services">Services</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Informations importantes</h4>
                     <ul>
                         <li><a href="/mention.html">Mentions légales</a></li>
-                        <li><a href="#">Polique de confidentialité</a></li>
+                        <li><a href="politique.html">Polique de confidentialité</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
