--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
                 <p>Fontainebleau, France</p><i class="fas fa-location-crosshairs"></i>
               </div>
               <div class="information">
-                <p>mail@hotmail.fr  </p><i class="fas fa-at"></i>
+                <p>contact@navilone.com</p><i class="fas fa-at"></i>
               </div>
               <div class="information">
-                <p>0745565434</p> <i class="fas fa-phone"></i>
+                <p>0184754535</p> <i class="fas fa-phone"></i>
               </div>
             </div>
   
@@ -306,7 +306,7 @@
             <span class="circle one"></span>
             <span class="circle two"></span>
   
-            <form action="https://formspree.io/f/mnnaryod" autocomplete="off" method="POST">
+            <form action="https://formspree.io/f/manynqvp" autocomplete="off" method="POST">
               <h3 class="title-contact">Contact</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" />
