--- a/mention.html
+++ b/mention.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></div>
+            <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn"><i class="fas fa-home"></i> Accueil<br></a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
