--- a/politique.html
+++ b/politique.html
@@ -43,7 +43,8 @@
 
             <h1> 1. Introduction </h1>
 
-            La présente politique de confidentialité décrit les pratiques de collecte, d’utilisation et de protection des données personnelles des utilisateurs du site www.votresite.fr. En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.
+            La présente politique de confidentialité décrit les pratiques de collecte, d’utilisation et de protection des données personnelles des utilisateurs 
+            du site www.votresite.fr. En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.
 
             <h1> 2. Données collectées </h1>
 
