--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 
 </head>
 <body>
+
+
+
+    <!----------------------------------           cookie section             ------------------------------------->
+
+  <div id="cookie-banner" class="cookie-banner">
+    <p>
+      Nous utilisons des cookies pour améliorer votre expérience.
+      <a href="politique.html">En savoir plus</a>
+    </p>
+    <button id="accept-cookie">Accepter</button>
+
+  </div>
+
+
     <div class="contact-button">
       <div class="contact-button-contain">
       <a href="tel:+33184754535" class="call-button"><i class="fas fa-phone"></i></a>
@@ -33,9 +48,9 @@
             <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn"><i class="fas fa-home"></i> Accueil</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#articles" class="menu-btn">Articles </a></li>
                 <li><a href="#apropos" class="menu-btn">A propos</a></li>
+                <li><a href="#articles" class="menu-btn">Articles </a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -111,55 +126,48 @@
         <div class="articlesl"> 
           <div class="tab-button" data-tab="1">
             <div class="case-contain">
-              <p class="tab-titre">1. Optimisez votre gestion d'entreprise avec Microsoft Business Central</p>
+              <p class="tab-titre">Optimisez votre gestion d'entreprise avec Microsoft Business Central</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
             </svg>
-            </div>
-            <div class="content article-mobile" id="tab-7">
-              <div class="visuel">
-                <img src="images/vv.png" alt="illustration des articles">
-                <p> Découvrez comment Microsoft Business Central peut simplifier la gestion de votre entreprise en centralisant tous vos processus en une seule plateforme. 
-                  Cette solution permet d'automatiser les tâches, d'améliorer la visibilité financière et de prendre des décisions basées sur des données en temps réel.</p>
-              </div>
             </div>
           </div>
           <div class="tab-button" data-tab="2">
             <div class="case-contain">
-              <p class="tab-titre">2. Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
+              <p class="tab-titre">Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
           <div class="tab-button" data-tab="3">
             <div class="case-contain">
-              <p class="tab-titre">3. Améliorez vos processus grâce à Power Platform</p>
+              <p class="tab-titre">Améliorez vos processus grâce à Power Platform</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
           <div class="tab-button" data-tab="4">
             <div class="case-contain">
-              <p class="tab-titre">4. Comment la transformation digitale peut améliorer vos performances commerciales</p>
+              <p class="tab-titre">Comment la transformation digitale peut améliorer vos performances commerciales</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" /></svg>
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" /></svg>
             </div>
           </div>
           <div class="tab-button" data-tab="5">
             <div class="case-contain">
-              <p class="tab-titre">5. La puissance de l’analyse de données avec Power BI</p>
+              <p class="tab-titre">La puissance de l’analyse de données avec Power BI</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
           <div class="tab-button" data-tab="6">
             <div class="case-contain">
-              <p class="tab-titre">6. L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</p>
+              <p class="tab-titre">L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
@@ -220,11 +228,12 @@
           <label for="a1" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>Analyse du besoin</h4>
-                      <p>Comprendre votre domaine d'activité, entrevoir les possibilités pour son développement</p>
+                      <h4>Optimisez votre gestion d'entreprise avec Microsoft Business Central</h4>
+                      <p> Découvrez comment Microsoft Business Central peut simplifier la gestion de votre entreprise en centralisant tous vos processus en une seule plateforme. 
+                        Cette solution permet d'automatiser les tâches, d'améliorer la visibilité financière et de prendre des décisions basées sur des données en temps réel.</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -233,11 +242,12 @@
               <div class="am-line">
                   
                   <div class="am-description">
-                      <h4>Outils nécessaires selon les besoins</h4>
-                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleurs solutions</p>
+                      <h4>Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</h4>
+                      <p>Choisir Dynamics 365 pour la gestion de la relation client (CRM), c'est opter pour une solution complète qui unifie les ventes, le marketing et le service client. 
+                        Bénéficiez d'une vue à 360° sur vos clients, automatisez les tâches, personnalisez les interactions et prenez des décisions basées sur des données en temps réel pour améliorer l'engagement et la fidélisation."</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -245,11 +255,12 @@
           <label for="a3" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>Mise en place</h4>
-                      <p>L'installation d'outils modernes pour vous faciliter la gestion de tout mouvement dans votre entreprise</p>
+                      <h4>Améliorez vos processus grâce à Power Platform</h4>
+                      <p>Améliorez vos processus avec Power Platform, une suite d'outils Microsoft qui permet de créer des applications personnalisées, d'automatiser les tâches répétitives et d'analyser les données. 
+                        Connectez facilement vos différentes sources d'information, optimisez vos flux de travail et gagnez en efficacité pour accélérer la transformation digitale de votre entreprise.</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -257,11 +268,12 @@
           <label for="a4" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>Formation des utilisateurs</h4>
-                      <p>Toute personnes qui seront amener à utiliser ses outils seront formés</p>
+                      <h4> Comment la transformation digitale peut améliorer vos performances commerciales</h4>
+                      <p>La transformation digitale améliore vos performances commerciales en automatisant les tâches, optimisant les processus et facilitant l'accès aux données en temps réel. 
+                        Elle permet de mieux comprendre les besoins des clients, d'accélérer la prise de décision et de personnaliser les offres, ce qui augmente l'efficacité et booste la croissance de votre entreprise.</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -269,11 +281,12 @@
           <label for="a5" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>Formation des utilisateurs</h4>
-                      <p>Toute personnes qui seront amener à utiliser ses outils seront formés</p>
+                      <h4>La puissance de l’analyse de données avec Power BI</h4>
+                      <p>Découvrez la puissance de l'analyse de données avec Power BI, un outil Microsoft qui transforme vos données en informations exploitables. Créez des tableaux de bord interactifs, visualisez les tendances en temps réel et prenez des décisions éclairées pour booster vos performances. 
+                        Simplifiez l'analyse complexe et partagez facilement les insights avec votre équipe.</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -281,11 +294,12 @@
           <label for="a6" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>Formation des utilisateurs</h4>
-                      <p>Toute personnes qui seront amener à utiliser ses outils seront formés</p>
+                      <h4>L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</h4>
+                      <p>L'intégration de Microsoft 365 avec vos systèmes d'entreprise offre une expérience fluide, connectant vos outils de productivité à vos applications métier. 
+                        Accédez facilement aux données, collaborez en temps réel et automatisez les flux de travail. Cette intégration renforce l'efficacité, réduit les silos et optimise vos opérations.</p>
                   </div>
                   <div class="icon"><svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M 30 10 L 70 50 L 30 90" stroke="black" stroke-width="5" fill="transparent" />
+                      <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
                   </svg></div>
               </div>
           </label>
@@ -488,5 +502,6 @@
    </footer>
 
     <script src="script.js"></script>
+    <script src="script-cookie.js"></script>
 </body>
 </html>
