--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
       <div class="contact-button-contain">
       <a href="tel:+33184754535" class="call-button"><i class="fas fa-phone"></i></a>
       <a href="contact@navilone.com" class="email-button"><i class="fas fa-envelope"></i></a>
+      <a href="#" class=""></a>
       </div>
+
     </div>
+
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
+
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
@@ -119,7 +123,7 @@
 
 
 
-    <section class="articles" id="articles">
+    <section class="articles" id="apropos">
       <h2 class="title">Nos articles importants</h2>
       <div class="container-articles">
       
@@ -128,7 +132,7 @@
             <div class="case-contain">
               <p class="tab-titre">Optimisez votre gestion d'entreprise avec Microsoft Business Central</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
@@ -136,7 +140,7 @@
             <div class="case-contain">
               <p class="tab-titre">Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
@@ -144,7 +148,7 @@
             <div class="case-contain">
               <p class="tab-titre">Améliorez vos processus grâce à Power Platform</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
@@ -152,14 +156,14 @@
             <div class="case-contain">
               <p class="tab-titre">Comment la transformation digitale peut améliorer vos performances commerciales</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" /></svg>
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" /></svg>
             </div>
           </div>
           <div class="tab-button" data-tab="5">
             <div class="case-contain">
               <p class="tab-titre">La puissance de l’analyse de données avec Power BI</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
@@ -167,7 +171,7 @@
             <div class="case-contain">
               <p class="tab-titre">L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--third-color)" stroke-width="5" fill="transparent" />
+                <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
