--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <!----------------------------------           cookie section             ------------------------------------->
 
-  <div id="cookie-banner" class="cookie-banner">
-    <p>
-      Nous utilisons des cookies pour améliorer votre expérience.
-      <a href="politique.html">En savoir plus</a>
-    </p>
-    <button id="accept-cookie">Accepter</button>
+    <div id="cookie-banner" class="cookie-banner">
+      <p>
+        Nous utilisons des cookies pour améliorer votre expérience.
+        <a href="politique.html">En savoir plus</a>
+      </p>
+      <button id="accept-cookie">Accepter</button>
 
-  </div>
+    </div>
 
 
     <div class="contact-button">
@@ -83,10 +83,10 @@
     </section>
 
 
-    <section class="services" id="services">
+    <section class="services" id="apropos">
         <div class="max-width">
             <h2 class="title">Nos valeurs</h2>
-               <div class="serv-content">
+              <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
@@ -108,9 +108,8 @@
                         <p>Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
                     </div>
                 </div>
-               </div>
-            </div>
-        </div>
+              </div>
+          </div>
     </section>
 
 
@@ -123,7 +122,7 @@
 
 
 
-    <section class="articles" id="apropos">
+    <section class="articles" id="articles">
       <h2 class="title">Nos articles importants</h2>
       <div class="container-articles">
       
@@ -320,7 +319,7 @@
 
 
 
-    <section class="wrapper" id="apropos">
+    <section class="wrapper" id="services">
       <h2 class="title">Nos services</h2>
       <div class="slide">
           <input type="radio" name="slide" id="c1" checked>
