--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="contact-button">
       <div class="contact-button-contain">
       <a href="tel:+33184754535" class="call-button"><i class="fas fa-phone"></i></a>
-      <a href="contact@navilone.com" class="email-button"><i class="fas fa-envelope"></i></a>
+      <a href="mailto:contact@navilone.com" class="email-button"><i class="fas fa-envelope"></i></a>
       <a href="#" class=""></a>
       </div>
 
