--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <div class="text-1">Bienvenue sur le site de</div>
                 <div class="text-2">NAVILONE</div> 
                 <div class="text-3">Nous sommes experts en </br><span class="typing"></span></div>
-                <a href="#contact">Contactez-moi</a>
+                <a href="#contact" id="apropos">Contactez-moi</a>
             </div>
         </div>
     </section>
 
 
-    <section class="services" id="apropos">
+    <section class="services">
         <div class="max-width">
             <h2 class="title">Nos valeurs</h2>
               <div class="serv-content">
@@ -104,7 +104,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Formations</div>
-                        <p>Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
+                        <p id="articles">Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
                     </div>
                 </div>
               </div>
@@ -121,7 +121,7 @@
 
 
 
-    <section class="articles" id="articles">
+    <section class="articles">
       <h2 class="title">Nos articles importants</h2>
       <div class="container-articles">
       
@@ -136,7 +136,7 @@
           </div>
           <div class="tab-button" data-tab="2">
             <div class="case-contain">
-              <p class="tab-titre">Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
+              <p class="tab-titre">Choisissez Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
@@ -152,22 +152,22 @@
           </div>
           <div class="tab-button" data-tab="4">
             <div class="case-contain">
-              <p class="tab-titre">Comment la transformation digitale peut améliorer vos performances commerciales</p>
+              <p class="tab-titre">Améliorez vos performances en la digitalisant</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" /></svg>
             </div>
           </div>
           <div class="tab-button" data-tab="5">
             <div class="case-contain">
-              <p class="tab-titre">La puissance de l’analyse de données avec Power BI</p>
+              <p class="tab-titre">Utilisez la puissance de l’analyse de données avec Power BI</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
             </div>
           </div>
           <div class="tab-button" data-tab="6">
-            <div class="case-contain">
-              <p class="tab-titre">L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</p>
+            <div class="case-contain" id="services">
+              <p class="tab-titre">Intégrez Microsoft 365 de manière transparente à vos systèmes d'entreprise</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
@@ -188,7 +188,7 @@
             <div class="visuel">
             <img src="images/fd.png" alt="illustration des articles">
             <p>Choisir Dynamics 365 pour la gestion de la relation client (CRM), c'est opter pour une solution complète qui unifie les ventes, le marketing et le service client. 
-              Bénéficiez d'une vue à 360° sur vos clients, automatisez les tâches, personnalisez les interactions et prenez des décisions basées sur des données en temps réel pour améliorer l'engagement et la fidélisation."</p>
+              Bénéficiez d'une vue à 360° sur vos clients, automatisez les tâches, personnalisez les interactions et prenez des décisions basées sur des données en temps réel pour améliorer l'engagement et la fidélisation.</p>
             </div>
           </div>
           <div class="content" id="tab-3">
@@ -318,7 +318,7 @@
 
 
 
-    <section class="wrapper" id="services">
+    <section class="wrapper">
       <h2 class="title">Nos services</h2>
       <div class="slide">
           <input type="radio" name="slide" id="c1" checked>
@@ -327,7 +327,7 @@
                   <div class="icon">1</div>
                   <div class="description">
                       <h4>Analyse du besoin</h4>
-                      <p>Comprendre votre domaine d'activité, entrevoir les possibilités pour son développement</p>
+                      <p>Comprendre votre domaine d'activité, entrevoir les possibilités pour son développement.</p>
                   </div>
               </div>
           </label>
@@ -337,7 +337,7 @@
                   <div class="icon">2</div>
                   <div class="description">
                       <h4>Outils nécessaires selon les besoins</h4>
-                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleurs solutions</p>
+                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleurs solutions.</p>
                   </div>
               </div>
           </label>
@@ -347,7 +347,7 @@
                   <div class="icon">3</div>
                   <div class="description">
                       <h4>Mise en place</h4>
-                      <p>L'installation d'outils modernes pour vous faciliter la gestion de tout mouvement dans votre entreprise</p>
+                      <p>L'installation d'outils modernes pour vous faciliter la gestion de tout mouvement dans votre entreprise.</p>
                   </div>
               </div>
           </label>
@@ -355,9 +355,9 @@
           <label for="c4" class="slider">
               <div class="line">
                   <div class="icon">4</div>
-                  <div class="description">
+                  <div class="description"  id="contact">
                       <h4>Formation des utilisateurs</h4>
-                      <p>Toute personnes qui seront amener à utiliser ses outils seront formés</p>
+                      <p>Toutes personnes qui seront amener à utiliser ses outils seront formées.</p>
                   </div>
               </div>
           </label>
@@ -372,14 +372,14 @@
  
 
 
-    <div class="container" id="contact">
+    <div class="container">
         <span class="big-circle"></span>
         <div class="form">
           <div class="contact-info">
-            <h3 class="title-contact">Restons en contact</h3>
+            <h3 class="title-contact">Nous sommes à votre disposition</h3>
             <p class="text">
-              VOUS AVEZ ICI TOUTES LES INFORMATIONS IMPORTANTES POUR NOUS CONTACTER. </br>
-              Les informations recueillies à partir de ce formulaire font l'objet d'un traitement informatisé destiné à répondre à votre demande.
+              Laissez-nous vos coordonnées et nous vous contacterons au plus vite </br>
+              <span>* Les informations recueillies à partir de ce formulaire font l'objet d'un traitement informatisé destiné à répondre à votre demande.</span>
             </p>
   
             <div class="info">
@@ -387,7 +387,7 @@
                 <p>Fontainebleau, France</p><i class="fas fa-location-crosshairs"></i>
               </div>
               <div class="information">
-                <p>contact@navilone.com</p><i class="fas fa-at"></i>
+                <p>contact@navilone.com</p>
               </div>
               <div class="information">
                 <p>0184754535</p> <i class="fas fa-phone"></i>
@@ -395,7 +395,7 @@
             </div>
   
             <div class="social-media">
-              <p>Contactez-moi ici aussi : </p>
+              <p>Contactez-nous ici aussi : </p>
               <div class="social-icons">
                 <a href="https://www.linkedin.com/in/prasath-thamboo/">
                   <i class="fab fa-linkedin-in"></i>
@@ -412,7 +412,7 @@
               <h3 class="title-contact">Contact</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" />
-                <label for="">Pseudo</label>
+                <label for="">Nom</label>
                 <span>Username</span>
               </div>
               <div class="input-container">
