--- a/politique.html
+++ b/politique.html
@@ -65,7 +65,7 @@
 
                 <h1> 4. Destinataires des données </h1>
 
-            Les données collectées sont destinées uniquement à l'équipe de gestion de projets de [Nom de l’entreprise]. Elles ne sont ni vendues, ni échangées, ni transférées à des tiers, sauf obligation légale.
+            Les données collectées sont destinées uniquement à l'équipe de gestion de projets de Navilone. Elles ne sont ni vendues, ni échangées, ni transférées à des tiers, sauf obligation légale.
 
             <h1> 5. Durée de conservation des données </h1>
 
@@ -81,7 +81,7 @@
                 Droit à la limitation du traitement : Vous pouvez demander que l'utilisation de vos données soit restreinte.
                 Droit d'opposition : Vous pouvez vous opposer au traitement de vos données pour des motifs légitimes.
 
-            Pour exercer ces droits, vous pouvez nous contacter à l'adresse suivante : contact@votresite.fr.
+            Pour exercer ces droits, vous pouvez nous contacter à l'adresse suivante : contact@navilone.com.
 
             <h1> 7. Sécurité des données </h1>
 
@@ -95,11 +95,11 @@
 
             Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications seront publiées sur cette page avec la date de mise à jour.
 
-            Dernière mise à jour : [Date]
+            Dernière mise à jour : 05/11/2024
 
             <h1> 10. Contact </h1>
 
-            Pour toute question concernant notre politique de confidentialité, vous pouvez nous écrire à : contact@votresite.fr.
+            Pour toute question concernant notre politique de confidentialité, vous pouvez nous écrire à : contact@navilone.com.
 
         </div>
 
