--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
 
     <section class="services">
+        <div class="max-width">
             <h2 class="title">Nos valeurs</h2>
               <div class="serv-content">
                 <div class="card">
@@ -107,6 +108,7 @@
                     </div>
                 </div>
               </div>
+          </div>
     </section>
 
 
