--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       <div class="contact-button-contain">
       <a href="tel:+33184754535" class="call-button"><i class="fas fa-phone"></i></a>
       <a href="mailto:contact@navilone.com" class="email-button"><i class="fas fa-envelope"></i></a>
-      <a href="#" class=""></a>
       </div>
-
     </div>
 
     <div class="scroll-up-btn">
@@ -337,7 +335,7 @@
                   <div class="icon">2</div>
                   <div class="description">
                       <h4>Outils nécessaires selon les besoins</h4>
-                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleurs solutions.</p>
+                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleures solutions.</p>
                   </div>
               </div>
           </label>
