--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
           <div class="tab-button" data-tab="2">
             <div class="case-contain">
-              <p class="tab-titre">Choisissez Dynamics 365 pour la gestion de la relation client (CRM) ?</p>
+              <p class="tab-titre">Choisissez Dynamics 365 pour la gestion de relation client (CRM)</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
             </svg>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="tab-button" data-tab="6">
-            <div class="case-contain" id="services">
+            <div class="case-contain">
               <p class="tab-titre">Intégrez Microsoft 365 de manière transparente à vos systèmes d'entreprise</p>
               <svg width="50" height="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <path d="M 30 10 L 70 50 L 30 90" stroke="var(--second-color)" stroke-width="5" fill="transparent" />
@@ -242,7 +242,7 @@
               <div class="am-line">
                   
                   <div class="am-description">
-                      <h4>Pourquoi choisir Dynamics 365 pour la gestion de la relation client (CRM) ?</h4>
+                      <h4>Choisissez Dynamics 365 pour la gestion de relation client (CRM)</h4>
                       <p>Choisir Dynamics 365 pour la gestion de la relation client (CRM), c'est opter pour une solution complète qui unifie les ventes, le marketing et le service client. 
                         Bénéficiez d'une vue à 360° sur vos clients, automatisez les tâches, personnalisez les interactions et prenez des décisions basées sur des données en temps réel pour améliorer l'engagement et la fidélisation."</p>
                   </div>
@@ -268,7 +268,7 @@
           <label for="a4" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4> Comment la transformation digitale peut améliorer vos performances commerciales</h4>
+                      <h4> Améliorez vos performances en la digitalisant </h4>
                       <p>La transformation digitale améliore vos performances commerciales en automatisant les tâches, optimisant les processus et facilitant l'accès aux données en temps réel. 
                         Elle permet de mieux comprendre les besoins des clients, d'accélérer la prise de décision et de personnaliser les offres, ce qui augmente l'efficacité et booste la croissance de votre entreprise.</p>
                   </div>
@@ -281,7 +281,7 @@
           <label for="a5" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>La puissance de l’analyse de données avec Power BI</h4>
+                      <h4>Utilisez la puissance de l’analyse de données avec Power BI</h4>
                       <p>Découvrez la puissance de l'analyse de données avec Power BI, un outil Microsoft qui transforme vos données en informations exploitables. Créez des tableaux de bord interactifs, visualisez les tendances en temps réel et prenez des décisions éclairées pour booster vos performances. 
                         Simplifiez l'analyse complexe et partagez facilement les insights avec votre équipe.</p>
                   </div>
@@ -294,7 +294,7 @@
           <label for="a6" class="am-slider">
               <div class="am-line">
                   <div class="am-description">
-                      <h4>L'intégration transparente de Microsoft 365 avec vos systèmes d'entreprise</h4>
+                      <h4>Intégrez Microsoft 365 de manière transparente à vos systèmes d'entreprise</h4>
                       <p>L'intégration de Microsoft 365 avec vos systèmes d'entreprise offre une expérience fluide, connectant vos outils de productivité à vos applications métier. 
                         Accédez facilement aux données, collaborez en temps réel et automatisez les flux de travail. Cette intégration renforce l'efficacité, réduit les silos et optimise vos opérations.</p>
                   </div>
@@ -303,11 +303,12 @@
                   </svg></div>
               </div>
           </label>
-          
-      </div>
+      </div>      
     </section>
 
+     <div class="service-ancrage" id="services">
 
+      </div>
 
 
     <!----------------------------------           about section start             ------------------------------------->
