--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   <div class="icon">4</div>
                   <div class="description"  id="contact">
                       <h4>Formation des utilisateurs</h4>
-                      <p>Toutes personnes qui seront amener à utiliser ses outils seront formées.</p>
+                      <p>Toutes les personnes qui seront amenées à utiliser ces outils seront formées.</p>
                   </div>
               </div>
           </label>
