--- a/politique.html
+++ b/politique.html
@@ -44,7 +44,7 @@
             <h1> 1. Introduction </h1>
 
             La présente politique de confidentialité décrit les pratiques de collecte, d’utilisation et de protection des données personnelles des utilisateurs 
-            du site www.votresite.fr. En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.
+            du site "https://navilone.com/" . En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.
 
             <h1> 2. Données collectées </h1>
 
