--- a/politique.html
+++ b/politique.html
@@ -116,6 +116,7 @@
                         <a href="https://www.linkedin.com/company/navilon/?originalSubdomain=fr"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
+                <iframe src="https://navilone.com" width="560" height="315" title="YouTube video player"></iframe>
                 <div class="footer-col">
                     <h4>La société Navilone</h4>
                     <ul>
