--- a/index.html
+++ b/index.html
@@ -494,5 +494,6 @@
 
     <script src="script.js"></script>
     <script src="script-cookie.js"></script>
+    <script src="trad.js"></script>
 </body>
 </html>
