--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
 
     <!----------------------------------           cookie section             ------------------------------------->
-
+    <div class ="trad-button">
+        <button onclick="setLanguage('en')">English</button>
+        <button onclick="setLanguage('fr')">Français</button>
+    </div>
+        
     <div class="contact-button">
       <div class="contact-button-contain">
       <a href="tel:+33184754535" class="call-button"><i class="fas fa-phone"></i></a>
