--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 
 
-    <!----------------------------------           cookie section             ------------------------------------->
+    <!----------------------------------           bouton section             ------------------------------------->
+
+    
     <div class ="trad-button">
         <button onclick="setLanguage('en')">English</button>
         <button onclick="setLanguage('fr')">Français</button>
@@ -37,6 +39,9 @@
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
+
+    <!----------------------------------           navbar section start             ------------------------------------->
+
 
     <nav class="navbar">
         <div class="max-width">
