--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     <div class="img"><img src="images/Navilone_logo.png" alt="logo"><img src="images/Navilone_logo_écriture.png" alt="logo"></div>
                     <p> Transformez vos idées en succès grâce à une gestion de projet experte, sur-mesure et orientée résultats.</p> </br> </br> 
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/company/navilon/?originalSubdomain=fr"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://fr.linkedin.com/company/navilone"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
@@ -502,4 +502,7 @@
 
     <script src="script.js"></script>
     <script src="trad.js"></script>
-rc="script.js"></script>
+
+
+</body>
+</html>
