--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Conseil pour PME</div>
-                        <p>Nous proposons des services de conseil en gestion de projet qui répondent aux besoins spécifiques de votre entreprise.</p>
+                        <div class="text" id ="art1-tit">Conseil pour PME</div>
+                        <p id ="art1-tex">Nous proposons des services de conseil en gestion de projet qui répondent aux besoins spécifiques de votre entreprise.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Outils de gestion</div>
-                        <p>Nous mettons en place les outils nécessaires pour la gestion de vos projets avec Powerplateform et Dynamics365.</p>
+                        <div class="text"  id ="art2-tit">Outils de gestion</div>
+                        <p id ="art2-tex">Nous mettons en place les outils nécessaires pour la gestion de vos projets avec Powerplateform et Dynamics365.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Formations</div>
-                        <p id="articles">Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
+                        <i class="fas fa-code" id="articles"></i>
+                        <div class="text"  id ="art3-tit">Formations</div>
+                        <p id ="art3-tex">Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
                     </div>
                 </div>
               </div>
