--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text" id ="art1tit">Conseil pour PME</div>
+                        <div class="text" id ="art1tit"></div>
                         <p id ="art1tex">Nous proposons des services de conseil en gestion de projet qui répondent aux besoins spécifiques de votre entreprise.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text"  id ="art2tit">Outils de gestion</div>
+                        <div class="text"  id ="art2tit"></div>
                         <p id ="art2tex">Nous mettons en place les outils nécessaires pour la gestion de vos projets avec Powerplateform et Dynamics365.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code" id="articles"></i>
-                        <div class="text"  id ="art3tit">Formations</div>
+                        <div class="text"  id ="art3tit"></div>
                         <p id ="art3tex">Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
                     </div>
                 </div>
