--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
             </div>
 
             <div class ="trad-button">
-              <button onclick="setLanguage('en')">English</button>
-              <button onclick="setLanguage('fr')">Français</button>
+                <button id="switchToEnglish" class="flag-button flag-uk" onclick="setLanguage('en')">English</button>
+                <button id="switchToFrench" class="flag-button flag-fr" onclick="setLanguage('fr')">Français</button>
+                <button onclick="setLanguage('en')">English</button>
+                <button onclick="setLanguage('fr')">Français</button>
             </div>
         
         </div>
