--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
 
             <div class ="trad-button">
-                <button id="switchToEnglish" class="flag-button flag-uk" onclick="setLanguage('en')">English</button>
-                <button id="switchToFrench" class="flag-button flag-fr" onclick="setLanguage('fr')">Français</button>
+                <button id="switchToEnglish" class="flag-button flag-uk" onclick="setLanguage('en')"></button>
+                <button id="switchToFrench" class="flag-button flag-fr" onclick="setLanguage('fr')"></button>
             </div>
         
         </div>
