--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
 
             <div class ="trad-button">
-                <button id="switchToEnglish" class="flag-button flag-uk" onclick="setLanguage('en')"></button>
-                <button id="switchToFrench" class="flag-button flag-fr" onclick="setLanguage('fr')"></button>
+                <button id="switchToEnglish" class="flag-button" onclick="setLanguage('en')"> 🇬🇧 EN</button>
+                <button id="switchToFrench" class="flag-button" onclick="setLanguage('fr')">🇫🇷 FR</button>
             </div>
         
         </div>
@@ -86,21 +86,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text" id ="art1tit"></div>
-                        <p id ="art1tex">Nous proposons des services de conseil en gestion de projet qui répondent aux besoins spécifiques de votre entreprise.</p>
+                        <p id ="art1tex"></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text"  id ="art2tit"></div>
-                        <p id ="art2tex">Nous mettons en place les outils nécessaires pour la gestion de vos projets avec Powerplateform et Dynamics365.</p>
+                        <p id ="art2tex"></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code" id="articles"></i>
                         <div class="text"  id ="art3tit"></div>
-                        <p id ="art3tex">Nous formons et suivons les collaborateurs  pour utiliser les outils de manière optimales que nous vous avons mis en place.</p>
+                        <p id ="art3tex"></p>
                     </div>
                 </div>
               </div>
