--- a/index.html
+++ b/index.html
@@ -478,11 +478,13 @@
                 </div>
                 <div class="footer-col">
                     <h4>La société Navilone</h4>
-                    <ul>
-                        <li><a href="#home">Accueil</a></li>
-                        <li><a href="#apropos">A propos</a></li>
-                        <li><a href="#services">Services</a></li>
-                    </ul>
+                    <ul class="menu">
+                        <li><a href="#home" class="menu-btn" id="homee"><i class="fas fa-home"></i></a></li>
+                        <li><a href="#apropos" class="menu-btn" id="about"></a></li>
+                        <li><a href="#articles" class="menu-btn" id="news"></a></li>
+                        <li><a href="#services" class="menu-btn">Services</a></li>
+                        <li><a href="#contact" class="menu-btn">Contact</a></li>
+                   </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Informations importantes</h4>
